<resources>
    <string name="app_name">tasteIt</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="forgot_password">forgot your password?</string>
    <string name="login">login!</string>
    <string name="no_login">Navigate without login?</string>
    <string name="main_menu">Main Menu</string>
    <string name="acept">I read and accept the</string>
    <string name="terms">terms and legal uses.</string>
    <string name="empty_email">put your email</string>
    <string name="invalid_email">Woops! that email is wrong</string>
    <string name="google">Login with GOOGLE</string>
    <string name="facebook">Login with FACEBOOK</string>
    <string name="error">Error, something went wrong</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="register_now">register now!</string>
    <string name="show">show</string>
    <string name="hide">hide</string>

    <string name="Camera">From Camera</string>
    <string name="Gallery">From Gallery</string>

    <string name="facebook_app_id">383004270667195</string>
    <string name="fb_login_protocol_scheme">fb383004270667195</string>
    <string name="facebook_client_token">94d8b746dd4fbb2e3df24d6cdb6ff559</string>

    <string name="bar_title_terms">Terms and conditions of use</string>
    <string name="terms1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rhoncus
        convallis metus at pretium. Vivamus at lacinia leo. Praesent velit elit, suscipit sit amet
        pulvinar id, imperdiet ac massa. Quisque molestie lectus rhoncus urna tempor, ut lacinia mi
        tempor. Praesent volutpat, ligula eget lobortis cursus, mauris libero consequat ligula, nec
        scelerisque erat ipsum tempor justo. Aliquam ornare faucibus augue vel faucibus. Ut
        sollicitudin commodo tortor eu faucibus. Vestibulum lacinia ligula sed tortor auctor, vitae
        sollicitudin lorem dapibus. Phasellus sed tincidunt odio.</string>
    <string name="terms2">Praesent arcu nisi, auctor quis tempor id, vehicula non nulla. Sed a
        fermentum tellus, quis pharetra lorem. Fusce vehicula libero in ultricies varius.
        Suspendisse vel velit tortor. Aliquam non nisi eget lectus tempor consectetur sed in magna.
        Nullam tincidunt, nibh ut sodales suscipit, ante est luctus purus, sed pellentesque ipsum
        massa et quam. Proin sed sapien ultrices ex aliquet elementum sed et erat. Sed tincidunt
        felis sapien, a suscipit massa cursus et. Phasellus auctor tellus ac neque maximus accumsan.
        Morbi sit amet odio nec sapien pharetra elementum maximus id odio. Integer laoreet, neque
        id efficitur auctor, magna massa consequat justo, quis vehicula ipsum massa at sem. Morbi
        in ornare sapien, in luctus mauris. </string>
    <string name="terms3">Sed id libero auctor, lacinia lectus a, consequat nisl. Nam quis suscipit
        purus. Fusce at congue quam. Etiam congue imperdiet bibendum. Etiam at porttitor ipsum.
        Donec consectetur sapien in neque tempus tempus. Sed vulputate rutrum ultrices. Praesent
        in est leo. Suspendisse euismod purus id urna tempus pellentesque. Praesent condimentum
        nisl sit amet purus pulvinar sagittis. Cras purus felis, hendrerit et ornare ut, molestie
        id orci. Integer dictum consequat leo, id pretium urna tempus et. Donec nibh ante, laoreet
        id lorem vitae, vestibulum sollicitudin lorem. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>

    <!--Countries-->
    <string-array name="countries_array">
        <item>Spain</item>
        <item>France</item>
        <item>Italy</item>
        <item>Portugal</item>
        <item>Greece</item>
        <item>Germany</item>
        <item>Turkey</item>
        <item>England</item>
    </string-array>
    <string name="title_activity_cook_book">ActivityCookBook</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_profile_data">ActivityProfileData</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="add_your_comment">Add your comment..</string>

    <string-array name="tags_array">
        <item>carne</item>
        <item>pescado</item>
        <item>pollo</item>
        <item>pan</item>
        <item>arroz</item>
        <item>fideos</item>
        <item>huevos</item>
        <item>queso</item>
        <item>leche</item>
        <item>salsa</item>
        <item>especias</item>
        <item>hierbas</item>
        <item>limón</item>
        <item>asar</item>
        <item>freír</item>
        <item>hervir</item>
        <item>saltear</item>
        <item>sofreír</item>
        <item>hornear</item>
        <item>marinar</item>
        <item>gratinar</item>
        <item>glasear</item>
        <item>guisar</item>
        <item>escalfar</item>
        <item>tostar</item>
        <item>flambear</item>
    </string-array>

</resources>