<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityTerms"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bar_title_terms"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        android:background="@color/gray"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms1"
        android:textSize="12sp"
        android:justificationMode="inter_word"
        android:layout_marginTop="20dp"
        android:layout_margin="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms2"
        android:textSize="12sp"
        android:justificationMode="inter_word"
        android:layout_marginTop="20dp"
        android:layout_margin="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms3"
        android:textSize="12sp"
        android:justificationMode="inter_word"
        android:layout_marginTop="20dp"
        android:layout_margin="8dp" />



</LinearLayout>