<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_tasteit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:backgroundTint="@color/maroon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:backgroundTint="@color/maroon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/bShowPass"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_eye"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/Confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:backgroundTint="@color/maroon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/bShowPass2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_eye"
        app:layout_constraintEnd_toEndOf="@+id/etConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_light"
        android:onClick="forgotPassword"
        android:paddingTop="10dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bLogin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword">

        <CheckBox
            android:id="@+id/cbAcept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/acept"
            android:textSize="13sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:fontFamily="@font/comfortaa_light"
            android:onClick="goTerms"
            android:text="@string/terms"
            android:textColor="@color/red"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/cbAcept"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--
        <Button
            android:id="@+id/btSignGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/viewCustom"
            android:theme="@style/viewCustom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/google"
            android:text="@string/google"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:paddingLeft="30dp"
            android:fontFamily="@font/comfortaa_light"
            android:onClick="callSingInGoogle"
            />


        <Button
            android:id="@+id/btSignFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/viewCustom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/facebook"
            android:text="@string/facebook"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:paddingLeft="30dp"
            android:fontFamily="@font/comfortaa_light"
            android:onClick="callSingInFacebook" />

    -->

</androidx.constraintlayout.widget.ConstraintLayout>


